# Scrapy_DrissionPage

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
examples/basic_spider/: basic_spider.py
examples/javascript_spider/: javascript_spider.py
examples/login_spider/: login_spider.py
examples/mode_switch_spider/: mode_switch_spider.py
examples/pagination_spider/: pagination_spider.py
examples/proxy_spider/: proxy_spider.py
scrapy_drissionpage/: __init__.py  browser_manager.py  downloader.py  middleware.py  request.py  response.py  spider.py
scrapy_drissionpage/utils/: __init__.py  mode_switcher.py  selector.py
tests/: conftest.py  test_browser_manager.py  test_middleware.py  test_request_response.py  test_spider.py  test_utils.py
